cambios api y docs api
