# app/Http/Controllers/Api/LoginController.php
@@ -7,6 +7,39 @@ use Illuminate\Http\Request;
 use App\Models\User;
 use Illuminate\Support\Facades\Hash;
 
+/**
+ * @OA\Post(
+ * path="/login",
+ * summary="Sign in",
+ * description="Login by email, password",
+ * operationId="authLogin",
+ * tags={"auth"},
+ * @OA\RequestBody(
+ *    required=true,
+ *    description="Pass user credentials",
+ *    @OA\JsonContent(
+ *       @OA\Property(property="user", type="object", ref="#/components/schemas/User"),
+ *    ),
+ * ),
+ * @OA\Response(
+ *    response=422,
+ *    description="Wrong credentials response",
+ *    @OA\JsonContent(
+ *       @OA\Property(property="message", type="string", example="Sorry, wrong email address or password. Please try again"),
+ *        ),
+ *     ),
+ *  ),
+ * @OA\Response(
+ *  response=200,
+ *  description="Success",
+ *  @OA\JsonContent(
+ *      @OA\Property(property="user", type="object", ref="#/components/schemas/User"),
+ *  ),
+ * ),
+ * 
+ * )
+ */
+
 class LoginController extends Controller
 {
     public function login(Request $request){
