# app/Http/Controllers/Api/addressController.php
@@ -1,64 +1,0 @@
-<?php
-
-namespace App\Http\Controllers\Api;
-
-use App\Http\Controllers\Controller;
-use App\Models\address;
-use Illuminate\Http\Request;
-
-class addressController extends Controller
-{
-    public function __construct(){
-	$this->middleware('auth:sanctum',['except' => ['index', 'show']]);
-    }
-    
-    public function index()
-    {
-        //
-    }
-
-    /**
-     * Store a newly created resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @return \Illuminate\Http\Response
-     */
-    public function store(Request $request)
-    {
-        //
-    }
-
-    /**
-     * Display the specified resource.
-     *
-     * @param  \App\Models\address  $address
-     * @return \Illuminate\Http\Response
-     */
-    public function show(address $address)
-    {
-        //
-    }
-
-    /**
-     * Update the specified resource in storage.
-     *
-     * @param  \Illuminate\Http\Request  $request
-     * @param  \App\Models\address  $address
-     * @return \Illuminate\Http\Response
-     */
-    public function update(Request $request, address $address)
-    {
-        //
-    }
-
-    /**
-     * Remove the specified resource from storage.
-     *
-     * @param  \App\Models\address  $address
-     * @return \Illuminate\Http\Response
-     */
-    public function destroy(address $address)
-    {
-        //
-    }
-}
